--- a/_config.yaml
+++ b/_config.yaml
@@ -1,8 +1,10 @@
 title: Colos
 description: A Jekyll theme
+url: http://colos.adrianhaasler.com
 email: dev@adrianhaasler.com
 permalink: /:categories/:title/
 markdown: redcarpet
 redcarpet:
   extensions: ['smart', 'with_toc_data']
-exclude: ['Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
+exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
+include: ['_feeds', '_pages']
