--- a/_config.yaml
+++ b/_config.yaml
@@ -8,3 +8,7 @@ redcarpet:
   extensions: ['smart', 'with_toc_data']
 exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
 include: ['_feeds', '_pages']
+locales:
+  es:
+    description: Un tema para Jekyll
+    homeurl: /es
