Use defaults to specify page languages
Now it is not necessary to specify the language for each page, since it is
automatically set thanks to the front matter defaults.

--- a/_config.yaml
+++ b/_config.yaml
@@ -11,9 +11,19 @@ include: ['_feeds', '_pages']
 defaults:
   -
     scope:
+      path: _pages/en
+    values:
+      lang: en
+  -
+    scope:
       path: _posts/en
     values:
       lang: en
+  -
+    scope:
+      path: _pages/es
+    values:
+      lang: es
   -
     scope:
       path: _posts/es
