Use defaults to specify feed languages
Now it is not necessary to specify the language for each feed, since it is
automatically set thanks to the front matter defaults.

--- a/_config.yaml
+++ b/_config.yaml
@@ -10,6 +10,11 @@ exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
 include: ['_feeds', '_pages']
 defaults:
   -
+      scope:
+        path: _feeds/en
+      values:
+        lang: en
+  -
     scope:
       path: _pages/en
     values:
@@ -19,6 +24,11 @@ defaults:
       path: _posts/en
     values:
       lang: en
+  -
+    scope:
+      path: _feeds/es
+    values:
+      lang: es
   -
     scope:
       path: _pages/es
