Use defaults to specify feed layout
Now it is not necessary to specify the layout for each feed, since it is
automatically set thanks to the front matter defaults.

--- a/_config.yaml
+++ b/_config.yaml
@@ -10,10 +10,15 @@ exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
 include: ['_feeds', '_pages']
 defaults:
   -
-      scope:
-        path: _feeds/en
-      values:
-        lang: en
+    scope:
+      path: _feeds
+    values:
+      layout: feed
+  -
+    scope:
+      path: _feeds/en
+    values:
+      lang: en
   -
     scope:
       path: _pages/en
