Use defaults to specify default layout
Now it is not necessary to specify `default` as layout, since it is the default
one thanks to the front matter defaults.

--- a/_config.yaml
+++ b/_config.yaml
@@ -11,6 +11,11 @@ include: ['_feeds', '_pages']
 defaults:
   -
     scope:
+      path: ''
+    values:
+      layout: default
+  -
+    scope:
       path: _feeds
     values:
       layout: feed
