Fix incorrect use of the <abbr> HTML tag
The title attribute of the <abbr> tag should be the complete name of the
abbreviation or acronym.

--- a/_config.yaml
+++ b/_config.yaml
@@ -50,6 +50,9 @@ defaults:
     values:
       lang: es
 locales:
+  en:
+    full_lang_name: English
   es:
+    full_lang_name: Español
     description: Un tema para Jekyll
     homeurl: /es
