--- a/_config.yaml
+++ b/_config.yaml
@@ -52,7 +52,11 @@ defaults:
 locales:
   en:
     full_lang_name: English
+    date:
+      complete_format: "%B %-d, %Y"
   es:
     full_lang_name: Español
     description: Un tema para Jekyll
     homeurl: /es
+    date:
+      complete_format: "%-d de %B del %Y"
