Add translation for month name in date.html
If a translation is not found the month name is rendered in the default liquid
language (English).

--- a/_config.yaml
+++ b/_config.yaml
@@ -60,3 +60,4 @@ locales:
     homeurl: /es
     date:
       complete_format: "%-d de %B del %Y"
+      month_names: [enero, febrero, marzo, abril, mayo, junio, julio, agosto, septiembre, octubre, noviembre, diciembre]
