Add translation for month abbreviated name in date.html
If a translation is not found the month abbreviated name is rendered in the
default liquid language (English).

--- a/_config.yaml
+++ b/_config.yaml
@@ -61,3 +61,4 @@ locales:
     date:
       complete_format: "%-d de %B del %Y"
       month_names: [enero, febrero, marzo, abril, mayo, junio, julio, agosto, septiembre, octubre, noviembre, diciembre]
+      abbr_month_names: [ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic]
