--- a/_config.yaml
+++ b/_config.yaml
@@ -61,5 +61,6 @@ locales:
     date:
       complete_format: "%-d de %B del %Y"
       weekday_names: [domingo, lunes, martes, miércoles, jueves, viernes, sábado]
+      abbr_weekday_names: [dom, lun, mar, mié, jue, vie, sáb]
       month_names: [enero, febrero, marzo, abril, mayo, junio, julio, agosto, septiembre, octubre, noviembre, diciembre]
       abbr_month_names: [ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic]
