--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ rvm:
   - 2.1.1
 install: bundle install
 script: bundle exec jekyll build
+branches:
+  only: /^.*$/
 env:
   global: NOKOGIRI_USE_SYSTEM_LIBRARIES=true
