Add build script
Having a build script with all the necessary build steps has two BIG advantages:

- Developers can execute the same script that the continuous integration server
will run, before pushing to the repository.
- It's possible to change the CI software (e.g. Jenkins, Drone, Wercker, etc.)
without porting all the steps separately.

--- a/_config.yaml
+++ b/_config.yaml
@@ -6,7 +6,7 @@ permalink: /:categories/:title/
 markdown: redcarpet
 redcarpet:
   extensions: ['smart', 'with_toc_data']
-exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md']
+exclude: ['CNAME', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'README.md', 'script']
 include: ['_feeds', '_pages']
 defaults:
   -
