--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 2.2
   - 2.1.1
 install: bundle install
-script: bundle exec jekyll build
+script: ./script/build
 branches:
   only: /^.*$/
 env:
