--- a/_config.yaml
+++ b/_config.yaml
@@ -14,6 +14,8 @@ defaults:
       path: ''
     values:
       layout: default
+      drawer:
+        mode: seamed
   -
     scope:
       path: _feeds
