Make drawer background color customizable per page or post
The drawer background color can be modified in _config.yaml or in each page or
post.

--- a/_config.yaml
+++ b/_config.yaml
@@ -16,6 +16,9 @@ defaults:
       layout: default
       drawer:
         mode: seamed
+      color:
+        drawer:
+          background: grey
   -
     scope:
       path: _feeds
