Style main header
This can also be customized for each page and post.

--- a/_config.yaml
+++ b/_config.yaml
@@ -19,6 +19,8 @@ defaults:
       color:
         drawer:
           background: grey
+        main:
+          header: grey
   -
     scope:
       path: _feeds
