Make header mode customizable
Possible values: standard, seamed, waterfall, waterfall-tall, scroll and cover.

For more information see
https://www.polymer-project.org/0.5/docs/elements/core-header-panel.html#core-header-panel.attributes.mode
and https://www.polymer-project.org/0.5/components/core-header-panel/demo.html

--- a/_config.yaml
+++ b/_config.yaml
@@ -16,6 +16,8 @@ defaults:
       layout: default
       drawer:
         mode: seamed
+      header:
+        mode: seamed
       color:
         drawer:
           background: grey
