Style main content text color
The main content color is customizable for each page or post. The main header
color is the main content color if it has not been specified.

--- a/_config.yaml
+++ b/_config.yaml
@@ -22,7 +22,7 @@ defaults:
         drawer:
           background: grey
         main:
-          header: grey
+          content: grey
   -
     scope:
       path: _feeds
