Fix URL not changed in all files
Forgot that the URL is not only in CNAME.

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 title: Colos
 description: A Jekyll theme
-url: http://colos.adrianhaasler.com
+url: http://colos-jekyll.adrianhaasler.com
 email: dev@adrianhaasler.com
 permalink: /:categories/:title/
 markdown: redcarpet
